overflow-x fix

--- a/src/global.css
+++ b/src/global.css
@@ -7,7 +7,7 @@
 body {
   background-color: var(--primary);
 background-color: var(--primary);
-overflow-y: hidden;
+overflow-x: hidden;
 }
 
 img {
